--- a/index.html
+++ b/index.html
@@ -33,9 +33,61 @@
   <div class="back-to-top"></div>
 
   <!-- Header -->
-<?php
-  include 'header.php';
-?>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+      <div class="container">
+        <a href="index.php" class="navbar-brand">MutliEdge <span class="text-primary">Solutions</span></a>
+
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="navbarContent">
+          <ul class="navbar-nav ml-lg-4 pt-3 pt-lg-0">
+            <li class="nav-item active">
+              <a href="index.php" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.php" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="services.php" class="nav-link">Services</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a href="blog.php" class="nav-link">News</a>
+            </li> -->
+            <li class="nav-item">
+              <a href="contact.php" class="nav-link">Contact</a>
+            </li>
+          </ul>
+
+          <div class="ml-auto">
+            <a href="contact.php" class="btn btn-outline rounded-pill">Get a Quote</a>
+          </div>
+
+        </div>
+      </div>
+    </nav>
+
+    <div class="page-banner home-banner">
+      <div class="container h-100">
+        <div class="row align-items-center h-100">
+          <div class="col-lg-6 py-3 wow fadeInUp">
+            <h1 class="mb-4">MutliEdge Solutions</h1>
+            <p class="text-lg mb-5">Our MutliEdge solutions cover everything from cloud computing to Website Development, software development, Graphic Designing, Digital Marketing, Video Editing, GST Services, Online Forms.</p>
+            <a href="about.php" class="btn btn-outline border text-secondary">More Info</a>
+            <!-- <a href="#" class="btn btn-primary btn-split ml-2">Watch Video <div class="fab"><span class="mai-play"></span></div></a> -->
+          </div>
+          <div class="col-lg-6 py-3 wow zoomIn">
+            <div class="img-place">
+              <img src="assets/img/bg_image_1.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </header>
   <!-- Header end -->
 
   <main>
