--- a/services.html
+++ b/services.html
@@ -32,10 +32,42 @@
   <!-- Back to top button -->
   <div class="back-to-top"></div>
 
-  <?php
-    include 'header-page.php'
-  ?>
-  <header>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+      <div class="container">
+        <a href="index.php" class="navbar-brand">MutliEdge <span class="text-primary">Solutions</span></a>
+
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="navbarContent">
+          <ul class="navbar-nav ml-lg-4 pt-3 pt-lg-0">
+            <li class="nav-item">
+              <a href="index.php" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.php" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="services.php" class="nav-link">Services</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a href="blog.php" class="nav-link">News</a>
+            </li> -->
+            <li class="nav-item">
+              <a href="contact.php" class="nav-link">Contact</a>
+            </li>
+          </ul>
+
+          <div class="ml-auto">
+            <a href="contact.php" class="btn btn-outline rounded-pill">Get a Quote</a>
+          </div>
+
+        </div>
+      </div>
+    </nav>
+  
   <div class="container mt-5">
       <div class="page-banner">
         <div class="row justify-content-center align-items-center h-100">
