--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
-        <a href="index.php" class="navbar-brand">MutliEdge <span class="text-primary">Solutions</span></a>
+        <a href="index.html" class="navbar-brand">MutliEdge <span class="text-primary">Solutions</span></a>
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,24 +36,24 @@
         <div class="navbar-collapse collapse" id="navbarContent">
           <ul class="navbar-nav ml-lg-4 pt-3 pt-lg-0">
             <li class="nav-item">
-              <a href="index.php" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="about.php" class="nav-link">About</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="services.php" class="nav-link">Services</a>
+              <a href="services.html" class="nav-link">Services</a>
             </li>
             <!-- <li class="nav-item">
-              <a href="blog.php" class="nav-link">News</a>
+              <a href="blog.html" class="nav-link">News</a>
             </li> -->
             <li class="nav-item">
-              <a href="contact.php" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
 
           <div class="ml-auto">
-            <a href="contact.php" class="btn btn-outline rounded-pill">Get a Quote</a>
+            <a href="contact.html" class="btn btn-outline rounded-pill">Get a Quote</a>
           </div>
 
         </div>
@@ -66,7 +66,7 @@
           <div class="col-md-6">
             <nav aria-label="Breadcrumb">
               <ul class="breadcrumb justify-content-center py-0 bg-transparent">
-                <li class="breadcrumb-item"><a href="index.php">Home</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item active">Contact</li>
               </ul>
             </nav>
@@ -167,9 +167,66 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
     </div> <!-- .page-section -->
   </main>
 
-<?php
-  include 'footer.php';
-?>
+<footer class="page-footer">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-lg-3 py-3">
+          <h3>MutliEdge <span class="text-primary">Solutions</span></h3>
+          <p>We believe in building long-term partnerships and delivering exceptional MutliEdge solutions tailored to your business needs.</p>
+
+          <p><a href="#" >example@mail.com</a></p>
+          <p><a href="#">+91 1122 3344 5566</a></p>
+        </div>
+        <div class="col-lg-3 py-3">
+          <h5>Quick Links</h5>
+          <ul class="footer-menu">
+            <li><a href="#">How it works</a></li>
+            <li><a href="#">Security</a></li>
+            <!-- <li><a href="#">Pricing</a></li> -->
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Report a Bug</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3 py-3">
+          <h5>About Us</h5>
+          <ul class="footer-menu">
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Our Teams</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <!-- <li><a href="#">News & Press</a></li> -->
+          </ul>
+        </div>
+        <div class="col-lg-3 py-3">
+          <h5>Subscribe</h5>
+          <form action="#">
+            <input type="text" class="form-control" placeholder="Enter your mail..">
+          </form>
+
+          <div class="sosmed-button mt-4">
+            <a href="#"><span class="mai-logo-facebook-f"></span></a>
+            <a href="#"><span class="mai-logo-twitter"></span></a>
+            <a href="#"><span class="mai-logo-google"></span></a>
+            <a href="#"><span class="mai-logo-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6 py-2">
+          <p id="copyright">&copy; 2055 <a href=""></a>. All rights reserved</p>
+        </div>
+        <div class="col-sm-6 py-2 text-right">
+          <div class="d-inline-block px-3">
+            <a href="#">Privacy</a>
+          </div>
+          <div class="d-inline-block px-3">
+            <a href="contact.html">Contact Us</a>
+          </div>
+        </div>
+      </div>
+    </div> <!-- .container -->
+  </footer>
 
 
   <script src="assets/js/jquery-3.5.1.min.js"></script>
